Fixes for removal of obfuscation