@@ -63,8 +63,6 @@ final minecraftFiles = forgedev.minecraftFiles(minecraftVersion)
 
 final mcpBase = forgedev.mcpBase {
     mcpVersion = "${minecraftVersion}-${project.ext.mcpVersion}"
-    mappingChannel = mappingsChannel
-    mappingVersion = mappingsVersion
     accessTransformers.from file('src/main/resources/META-INF/accesstransformer.cfg')
     sideAnnotationStrippers.from file('src/main/resources/forge.sas')
 }
@@ -127,11 +125,6 @@ configurations {
         extendsFrom(bootstrap)
     }
 
-    register('installerextra') {
-        transitive = false
-        extendsFrom(bootstrap)
-    }
-
     named('api') {
         extendsFrom(installer)
     }
@@ -180,10 +173,6 @@ dependencies {
     installer projects.mclanguage
     installer projects.forgeTransformers
 
-    // Get the zip file with csv's of srg->mapepd for Runtime SRG->Mapped reflection remapping
-    // This is also only needed during dev time, and automatically added to the dep list by Mavenizer for userdev
-    // We shouldn't need this anymore now that we use runtime official mappings, but some of our code still references SRG names via reflection at dev time
-    runtimeOnly files(mcpBase.mappingZip)
     runtimeOnly files(mcpBase.extra)
 
     runtimeOnly libs.bootstrap
@@ -203,7 +192,7 @@ forgedev.runs {
 
             mainClass = 'net.minecraftforge.bootstrap.ForgeBootstrap'
             args '--gameDir', '.'
-            jvmArgs '-Djava.net.preferIPv6Addresses=system'
+            jvmArgs '-Djava.net.preferIPv6Addresses=system', '-XX:+UseCompactObjectHeaders'
 
             systemProperty 'bsl.debug', 'true'
             systemProperty 'terminal.jline', 'true'
@@ -220,13 +209,13 @@ forgedev.runs {
             systemProperty 'org.lwjgl.system.SharedLibraryExtractDirectory', 'lwjgl_dll'
 
             args '--launchTarget', 'forge_dev_client',
-                    '--username', 'Dev',
-                    '--version', project.name,
-                    '--accessToken', '0',
-                    '--userType', 'mojang',
-                    '--versionType', 'release',
-                    '--assetsDir', '{assets_root}',
-                    '--assetIndex', '{asset_index}'
+                 '--username', 'Dev',
+                 '--version', project.name,
+                 '--accessToken', '0',
+                 '--userType', 'mojang',
+                 '--versionType', 'release',
+                 '--assetsDir', '{assets_root}',
+                 '--assetIndex', '{asset_index}'
         }
     }
 
@@ -246,20 +235,20 @@ forgedev.runs {
     create('data') {
         options {
             args '--launchTarget', 'forge_dev_data',
-                    '--all',
-                    '--existing', sourceSets.main.resources.srcDirs[0],
-                    '--assetsDir', '{assets_root}',
-                    '--assetIndex', '{asset_index}'
+                 '--all',
+                 '--existing', sourceSets.main.resources.srcDirs[0],
+                 '--assetsDir', '{assets_root}',
+                 '--assetIndex', '{asset_index}'
 
             with(sourceSets.main) {
                 args '--mod', 'forge',
-                        '--output', rootProject.file('src/main/generated/')
+                     '--output', rootProject.file('src/main/generated/')
             }
 
             with(sourceSets.test) {
                 args '--mod', '.+',
-                        '--existing', sourceSets.test.resources.srcDirs[0],
-                        '--output', rootProject.file('src/test/generated/')
+                     '--existing', sourceSets.test.resources.srcDirs[0],
+                     '--output', rootProject.file('src/test/generated/')
             }
         }
     }
@@ -273,18 +262,18 @@ forgedev.runs {
 
             with(sourceSets.main) {
                 args '--launchTarget', 'forge_dev_client_data',
-                        '--mod', 'forge',
-                        '--output', rootProject.file('src/main/generated/'),
-                        '--mod', 'forge'
+                     '--mod', 'forge',
+                     '--output', rootProject.file('src/main/generated/'),
+                     '--mod', 'forge'
             }
 
             with(sourceSets.test) {
                 args '--launchTarget', 'forge_dev',
-                        '--launchEntry', 'minecraft/net.minecraft.client.data.Main',
-                        '--launchData',
-                        '--mod', '.+',
-                        '--existing', sourceSets.test.resources.srcDirs[0],
-                        '--output', rootProject.file('src/test/generated/')
+                     '--launchEntry', 'minecraft/net.minecraft.client.data.Main',
+                     '--launchData',
+                     '--mod', '.+',
+                     '--existing', sourceSets.test.resources.srcDirs[0],
+                     '--output', rootProject.file('src/test/generated/')
             }
         }
     }
@@ -300,7 +289,6 @@ final serverShim = forgedev.shim {
     }
     classpath {
         libraries configurations.installer
-        libraries configurations.installerextra
         library tasks.named('universalJar', Jar)
         library forgedev.binaryPatches('server').apply, 'server'
         serverBundle.fileProvider(minecraftFiles.server)
@@ -391,19 +379,19 @@ final universalJar = tasks.register('universalJar', Jar) {
     jarSigner.sign(it)
 }
 
-final sourcesSrg = renamer.sources(sourceSets.main) {
-    apply {
-        archiveClassifier = 'sources-srg'
-        mappings mcpBase.map2Srg
-        excFiles.from files('src/main/resources/forge.exc')
-    }
-    extract {
-        mustRunAfter(forgedev.patches.apply)
-    }
+final sourcesJarAll = tasks.register('sourcesJarAll', Jar) {
+    archiveClassifier = 'sources-all'
+    from(sourceSets.main.allJava.srcDirs)
 }
+
+// Our sources, plus the patches we do to Vanilla Minecraft
 final sourcesJar = tasks.register('sourcesJar', Jar) {
     archiveClassifier = 'sources'
     from(sourceSets.main.allJava.srcDirs - forgedev.patches.patched.asFile.get())
+    mustRunAfter(forgedev.patches.make)
+    from(forgedev.patches.patches) {
+        into 'patches/'
+    }
 }
 
 forgedev.userDev {
@@ -424,7 +412,7 @@ forgedev.userDev {
                 parents = []
                 main = 'net.minecraftforge.bootstrap.ForgeBootstrap'
                 args '--gameDir', '.'
-                jvmArgs '-Djava.net.preferIPv6Addresses=system'
+                jvmArgs '-Djava.net.preferIPv6Addresses=system', '-XX:+UseCompactObjectHeaders'
                 client = it.name.containsIgnoreCase('client')
                 environment 'MCP_MAPPINGS', '{mcp_mappings}'
             }
@@ -460,40 +448,27 @@ forgedev.userDev {
         }
     }
     patches {
-        modified.setFrom(sourcesSrg.apply.flatMap{ it.output })
+        modified.setFrom(sourcesJarAll.flatMap { it.archiveFile })
     }
     binaryPatches {
-        patches.setFrom(forgedev.patches.apply.flatMap { it.output })
-        dirty.setFrom(tasks.named('jar', Jar).flatMap { it.output })
+        mustRunAfter(forgedev.patches.make)
+        patches.setFrom(forgedev.patches.patches)
+        dirty.setFrom(tasks.named('jar', Jar).flatMap { it.archiveFile })
     }
 }
 
 forgedev.userdevCompatibility(minecraftVersion) {
-    clean = mcpBase.classesRaw
+    clean = mcpBase.classes
     dirty = tasks.named('jar', Jar)
 }
 
 // region Installer tasks, Not needed when we simplify the installer/remove obf
-final clientOfficial = renamer.classes('renameClientOfficial') {
-    additionalArgs = ['--ann-fix', '--ids-fix', '--src-fix', '--record-fix', '--strip-sigs', '--reverse']
-    input.fileProvider(minecraftFiles.client)
-    libraries = mcpBase.dependencyConfiguration
-    mappings minecraftFiles.clientMappings
-}
-final serverOfficial = renamer.classes('renameServerOfficial') {
-    additionalArgs = ['--ann-fix', '--ids-fix', '--src-fix', '--record-fix', '--strip-sigs', '--reverse']
-    input.fileProvider(minecraftFiles.serverExtracted)
-    libraries = mcpBase.dependencyConfiguration
-    mappings minecraftFiles.serverMappings
-}
 final clientBinPatches = forgedev.binaryPatches('client') {
-    clean = clientOfficial.flatMap { it.output }
+    clean = minecraftFiles.client
 }
 final serverBinPatches = forgedev.binaryPatches('server') {
-    clean = serverOfficial.flatMap { it.output }
+    clean = minecraftFiles.serverExtracted
 }
-final sanitizedClientMappings = renamer.convert("cleanClientMappings", minecraftFiles.clientMappings)
-final sanitizedServerMappings = renamer.convert("cleanServerMappings", minecraftFiles.serverMappings)
 // endregion
 
 forgedev.installer {
@@ -504,8 +479,6 @@ forgedev.installer {
     // Add extra libraries
     pack serverShim.jar // The Server executable jar IS needed to be packed, as the installer would need a spec bump in order to download it
     pack universalJar // I don't think this is strictly needed to be packed anymore, will need to double check later
-    // This isn't actually needed, but its here for some reason, probably wasn't deleted when then installer process was cleaned up
-    library mcpBase.mcpArtifact.get()
 
     launcherLibrary universalJar
     // We configure the launcher here to keep the order for easier diff, after publishing, move this to the LauncherJson configuration below
@@ -514,7 +487,6 @@ forgedev.installer {
         generated(clientBinPatches.apply, 'client')
     }
 
-    launcherLibraries configurations.installerextra
     launcherLibraries configurations.installer
 
     final launcherId = "${minecraftVersion}-${project.name}-${forgeVersion}"
@@ -566,31 +538,12 @@ forgedev.installer {
 
         final projectArtifact = "${project.group}:${project.name}:${project.version}"
 
-        data 'MOJMAPS', "[net.minecraft:client:${minecraftVersion}:mappings@tsrg]", "[net.minecraft:server:${minecraftVersion}:mappings@tsrg]"
-        data 'MOJMAPS_SHA', sanitizedClientMappings.flatMap{ it.output }, sanitizedServerMappings.flatMap{ it.output }
-
         data 'MC_UNPACKED', "[net.minecraft:client:${minecraftVersion}]", "[net.minecraft:server:${minecraftVersion}:unpacked]"
         data 'MC_UNPACKED_SHA', minecraftFiles.client, minecraftFiles.serverExtracted
-
-        data 'MC_OFF', "[net.minecraft:client:${minecraftVersion}:official]", "[net.minecraft:server:${minecraftVersion}:official]"
-        data 'MC_OFF_SHA', clientOfficial.flatMap { it.output } ,serverOfficial.flatMap { it.output }
 
         data 'BINPATCH', '/data/client.lzma', '/data/server.lzma'
         data 'PATCHED', "[$projectArtifact:client]", "[$projectArtifact:server]"
         data 'PATCHED_SHA', clientBinPatches.apply.flatMap {  it.output }, serverBinPatches.apply.flatMap { it.output }
-
-        def rename = (side, input) -> {
-            step(renamer) {
-                sides = [side]
-                args = [
-                        '--input', input,
-                        '--output', '{MC_OFF}',
-                        '--names', '{MOJMAPS}',
-                        '--ann-fix', '--ids-fix', '--src-fix', '--record-fix', '--strip-sigs', '--reverse'
-                ]
-                cache '{MC_OFF}', '{MC_OFF_SHA}'
-            }
-        }
 
         steps = [
                 extract(installertools) {
@@ -613,24 +566,25 @@ forgedev.installer {
                     jar '{MINECRAFT_JAR}', '{MC_UNPACKED}'
                     cache '{MC_UNPACKED}', '{MC_UNPACKED_SHA}'
                 },
-                step(installertools) {
-                    args = [
-                            '--task', 'DOWNLOAD_MOJMAPS',
-                            '--sanitize',
-                            '--version', minecraftVersion,
-                            '--side', '{SIDE}',
-                            '--output', '{MOJMAPS}'
-                    ]
-                    cache '{MOJMAPS}', '{MOJMAPS_SHA}'
-                },
-                rename.call('server', '{MC_UNPACKED}'),
-                rename.call('client', '{MINECRAFT_JAR}'),
                 step(binarypatcher) {
+                    side = 'server'
                     args = [
-                            '--clean', '{MC_OFF}',
+                            '--clean', '{MC_UNPACKED}',
                             '--output', '{PATCHED}',
                             '--apply', '{BINPATCH}',
-                            '--data', '--unpatched'
+                            '--data', '--unpatched',
+                            '--marker', '.forge_patched_minecraft'
+                    ]
+                    cache '{PATCHED}', '{PATCHED_SHA}'
+                },
+                step(binarypatcher) {
+                    side = 'client'
+                    args = [
+                            '--clean', '{MINECRAFT_JAR}',
+                            '--output', '{PATCHED}',
+                            '--apply', '{BINPATCH}',
+                            '--data', '--unpatched',
+                            '--marker', '.forge_patched_minecraft'
                     ]
                     cache '{PATCHED}', '{PATCHED_SHA}'
                 }
@@ -647,7 +601,7 @@ forgedev.installer {
         inheritsFrom = minecraftVersion
         mainClass = 'net.minecraftforge.bootstrap.ForgeBootstrap'
         gameArgs = [ '--launchTarget', 'forge_client' ]
-        jvmArgs = [ '-Djava.net.preferIPv6Addresses=system' ]
+        jvmArgs = [ '-Djava.net.preferIPv6Addresses=system', '-XX:+UseCompactObjectHeaders' ]
     }
 }
 
@@ -682,8 +636,6 @@ final mdkZip = tasks.register('mdkZip', Zip) {
                 FORGE_GROUP: project.group,
                 FORGE_NAME: project.name,
                 MC_VERSION: minecraftVersion,
-                MAPPING_CHANNEL: mappingsChannel,
-                MAPPING_VERSION: mappingsVersion,
                 FORGE_SPEC_VERSION: gitversion.info.tag.split("\\.")[0],
                 MC_NEXT_VERSION: minecraftNextVersion,
                 EVENTBUS_VERSION: libs.versions.eventbus.get()
@@ -833,7 +785,7 @@ tasks.withType(AbstractTestTask).configureEach {
 }
 // This shouldn't be needed according to the Gradle devs, as we never run these commands together.
 // But in another case of Gradle being gradle, here we are
-[ 'makePatches', 'compileJava', 'checkLicenseMain', 'updateLicenseMain', 'sourcesJar' ]
+[ 'makePatches', 'compileJava', 'checkLicenseMain', 'updateLicenseMain', 'sourcesJar', 'sourcesJarAll' ]
         .each{ tasks.named(it).configure{ mustRunAfter forgedev.patches.apply }}
 forgedev.runs.configureEach {
     run.configure { dependsOn finalizeSpawn}
